--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -104,7 +104,7 @@ jobs:
           api-level: 29
           force-avd-creation: false
           disable-animations: false
-          ram-size: 4096M
+          # ram-size: 4096M
           heap-size: 512M
           emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           script: echo "Generated AVD snapshot for caching."
@@ -114,7 +114,7 @@ jobs:
         with:
           api-level: 29
           disable-animations: true
-          ram-size: 4096M
+          # ram-size: 4096M
           heap-size: 512M
           emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none -no-snapshot-save
           # Clear logcat before tests begin
