--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -103,20 +103,21 @@ jobs:
         with:
           api-level: 29
           force-avd-creation: false
-          disable-animations: false
+          #disable-animations: true
           # ram-size: 4096M
           #heap-size: 512M
-          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none -memory 2048
+          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           script: echo "Generated AVD snapshot for caching."
 
       - name: run tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 29
-          disable-animations: true
+          force-avd-creation: false
+          #disable-animations: true
           # ram-size: 4096M
           #heap-size: 512M
-          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none -no-snapshot-save -memory 2048
+          emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           # Clear logcat before tests begin
           script: |
             adb logcat -c
