--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -105,7 +105,7 @@ jobs:
           force-avd-creation: false
           #disable-animations: true
           # ram-size: 4096M
-          #heap-size: 512M
+          heap-size: 256M
           emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           script: echo "Generated AVD snapshot for caching."
 
@@ -116,7 +116,7 @@ jobs:
           force-avd-creation: false
           #disable-animations: true
           # ram-size: 4096M
-          #heap-size: 512M
+          heap-size: 256M
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           # Clear logcat before tests begin
           script: |
