--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -113,9 +113,9 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 29
-          #force-avd-creation: false
+          force-avd-creation: true
           #disable-animations: true
-          # ram-size: 4096M
+          ram-size: 4096M
           heap-size: 256M
           #emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           # Clear logcat before tests begin
