--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,10 +26,10 @@
       <action android:name="android.intent.action.TTS_SERVICE" />
     </intent>
     <!--    TODO implement custom text selection actions -->
-    <!--    <intent>-->
-    <!--      <action android:name="android.intent.action.PROCESS_TEXT" />-->
-    <!--      <data android:mimeType="text/plain" />-->
-    <!--    </intent>-->
+    <intent>
+      <action android:name="android.intent.action.PROCESS_TEXT" />
+      <data android:mimeType="text/plain" />
+    </intent>
   </queries>
 
   <application
