--- a/.github/workflows/android_pr_build.yml
+++ b/.github/workflows/android_pr_build.yml
@@ -29,4 +29,4 @@ jobs:
     - name: gradle build
       uses: gradle/gradle-build-action@v2
       with:
-        arguments: build packageDebugAndroidTest :app:lint check
+        arguments: build packageDebugAndroidTest :app:lint check pixel2api30DebugAndroidTest -Pandroid.testoptions.manageddevices.emulator.gpu=swiftshader_indirect
