--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -2,7 +2,7 @@ container:
   image: ghcr.io/cirruslabs/android-sdk:33
   cpu: 4
   memory: 12G
-  kvm: true
+  kvm: "true"
 
 emulator_tests:
   script:
