--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -10,7 +10,7 @@ task:
   gradle_cache:
     folder: ~/.gradle/caches
   check_script:
-    - ./gradlew pixel2api30DebugAndroidTest
+    - ./gradlew -Pandroid.testoptions.manageddevices.emulator.gpu=swiftshader_indirect pixel2api30DebugAndroidTest
   cleanup_before_cache_script:
     - rm -rf ~/.gradle/caches/$GRADLE_VERSION/
     - rm -rf ~/.gradle/caches/transforms-1
