--- a/.editorconfig
+++ b/.editorconfig
@@ -15,6 +15,7 @@ ij_wrap_on_typing = false
 
 [*.{kt,kts}]
 ktlint_code_style = ktlint_official
+ktlint_function_naming_ignore_when_annotated_with=Composable
 twitter_compose_allowed_composition_locals = LocalTypographySettings,LocalDimens,LocalWindowSize,LocalFoldableHinge
 
 [{*.ant,*.fxml,*.jhm,*.jnlp,*.jrxml,*.opml,*.rng,*.tld,*.wsdl,*.xml,*.xsd,*.xsl,*.xslt,*.xul,rss_kuketz,rss_morningpaper}]
