Fixed small images being rendered too large and flickering on scroll
Fixed compose stability. Now items in reader are not re-rendered when
scrolling.

Fixed small images being rendered too large on screen

--- a/.editorconfig
+++ b/.editorconfig
@@ -14,6 +14,7 @@ ij_visual_guides = none
 ij_wrap_on_typing = false
 
 [*.{kt,kts}]
+max_line_length = 200
 ktlint_code_style = ktlint_official
 ktlint_function_naming_ignore_when_annotated_with=Composable
 twitter_compose_allowed_composition_locals = LocalTypographySettings,LocalDimens,LocalWindowSize,LocalFoldableHinge
