Test managed devices

--- a/.github/workflows/emulator_tests.yml
+++ b/.github/workflows/emulator_tests.yml
@@ -11,8 +11,8 @@ on:
         type: string
   push:
     branches:
-    #   - master
-      - gh-actions
+      - master
+    #  - gh-actions
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
