--- a/.editorconfig
+++ b/.editorconfig
@@ -17,7 +17,9 @@ ij_wrap_on_typing = false
 max_line_length = 200
 ktlint_code_style = ktlint_official
 ktlint_function_naming_ignore_when_annotated_with=Composable
-twitter_compose_allowed_composition_locals = LocalTypographySettings,LocalDimens,LocalWindowSize,LocalFoldableHinge
+twitter_compose_allowed_composition_locals = LocalTypographySettings,LocalDimens,LocalWindowSize,LocalFoldableHinge,LocalKeyEventHandlers
+
+[*.{java,js,jsx,ts,tsx}]
 
 [{*.ant,*.fxml,*.jhm,*.jnlp,*.jrxml,*.opml,*.rng,*.tld,*.wsdl,*.xml,*.xsd,*.xsl,*.xslt,*.xul,rss_kuketz,rss_morningpaper}]
 indent_size = 2
