--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,8 @@ jobs:
 
       - name: release
         uses: softprops/action-gh-release@v1
-        #if: startsWith(github.ref, 'refs/tags/')
+        # Ignore if play store fails because Google sucks
+        if: always()
         with:
           draft: false
           #tag_name: 2.4.20
