--- a/.editorconfig
+++ b/.editorconfig
@@ -17,7 +17,7 @@ ij_wrap_on_typing = false
 max_line_length = 200
 ktlint_code_style = ktlint_official
 ktlint_function_naming_ignore_when_annotated_with=Composable
-compose_allowed_composition_locals = LocalTypographySettings,LocalDI,LocalDimens,LocalWindowSize,LocalFoldableHinge
+compose_allowed_composition_locals = LocalTypographySettings,LocalDI,LocalDimens,LocalWindowSizeMetrics,LocalWindowSize,LocalFoldableHinge
 compose_allowed_forwarding = .*Screen
 
 [{*.ant,*.fxml,*.jhm,*.jnlp,*.jrxml,*.opml,*.rng,*.tld,*.wsdl,*.xml,*.xsd,*.xsl,*.xslt,*.xul,rss_kuketz,rss_morningpaper}]
