Revert 'Try PR CI again.'

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,4 +21,4 @@ android.enableJetifier=false
 android.useAndroidX=true
 
 org.gradle.caching=true
-#org.gradle.unsafe.configuration-cache=true
+org.gradle.unsafe.configuration-cache=true
