--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -52,6 +52,8 @@ mockito = "2.13.0"
 androidx-test-junit-ktx = "1.1.4"
 
 [libraries]
+# This is unused but it is a workaround to get Renovate to update the version of the plugin
+android-composeCompiler = {module="androidx.compose.compiler:compiler", version.ref ="composeCompiler"}
 okhttp-bom = { module = "com.squareup.okhttp3:okhttp-bom", version.ref = "okhttp" }
 coil-bom = { module = "io.coil-kt:coil-bom", version.ref = "coil" }
 compose-bom = { module = "androidx.compose:compose-bom", version.ref = "compose" }
