--- a/renovate.json
+++ b/renovate.json
@@ -6,12 +6,12 @@
     "packageRules": [
         {
             "matchPackagePatterns": [
-                "^org.jetbrains.kotlin",
+                "^org.jetbrains.kotlin.jvm",
                 "^com.google.devtools.ksp",
                 "^androidx.compose.compiler",
                 "^com.android.application"
             ],
-            "groupName": "kotlin"
+            "groupName": "compiler"
         }
     ]
 }
