--- a/.github/workflows/android_pr_build.yml
+++ b/.github/workflows/android_pr_build.yml
@@ -46,7 +46,7 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
 
+    - name: gradle setup
+      uses: gradle/actions/setup-gradle@v3
     - name: ktlint check
-      uses: gradle/gradle-build-action@v2
-      with:
-        arguments: ktlintCheck
+      run: ./gradlew ktlintCheck
