chore: renovate only rebase when conflicted
Signed-off-by: Jonas Kalderstam <jonas@cowboyprogrammer.org>

--- a/renovate.json
+++ b/renovate.json
@@ -4,6 +4,7 @@
         "config:recommended",
         ":semanticCommitTypeAll(chore)"
     ],
+    "rebaseWhen": "conflicted",
     "packageRules": [
         {
             "matchPackagePatterns": [
