build: try medium resource
Signed-off-by: Jonas Kalderstam <jonas@cowboyprogrammer.org>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,6 +68,7 @@ jobs:
     executor:
       name: android/android-machine
       tag: default
+      resource-class: medium
 
     steps:
       - checkout
