--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,25 +1,23 @@
 [versions]
 # Compose compiler is highly coupled to Kotlin version
 # See https://developer.android.com/jetpack/androidx/releases/compose-kotlin#pre-release_kotlin_compatibility
-kotlin = "1.9.25"
-ksp = "1.9.25-1.0.20"
-kotlinxSerialization = "1.6.1"
+kotlin = "2.0.21"
+ksp = "2.0.21-1.0.27"
+kotlinxSerialization = "1.8.0"
 androidPlugin = "8.8.0"
-# androidx.compose.compiler:compiler
-composeCompiler = "1.5.15"
 # BEGIN These should be upgraded in unison
 okhttp = "4.10.0"
 okio = "3.2.0"
-conscrypt = "2.5.3"
+conscrypt = "2.5.2"
 # END Unison
 ktlint-gradle = "12.1.2"
 ktlint-compose = "0.4.3"
 kodein = "7.5.0"
-coroutines = "1.7.3"
+coroutines = "1.9.0"
 gofeed = "0.1.2"
 moshi = "1.12.0"
-desugar = "2.0.3"
-jsoup = "1.7.3"
+desugar = "2.1.4"
+jsoup = "1.11.2"
 tagsoup = "1.2.1"
 readability4j = "1.0.5"
 retrofit = "2.9.0"
@@ -27,20 +25,20 @@ qrgen = "2.6.0"
 androidxCore = "1.15.0"
 androidxTestcore = "1.6.1"
 appcompat = "1.7.0"
-material = "1.6.1"
-material3 = "1.1.0"
-navigationCompose = "2.7.7"
+material = "1.12.0"
+material3 = "1.3.1"
+navigationCompose = "2.8.5"
 preference = "1.2.1"
 testRunner = "1.6.2"
-lifecycle = "2.6.2"
-room = "2.5.2"
+lifecycle = "2.8.7"
+room = "2.6.1"
 openai-client = "3.8.2"
-compose = "2024.04.00"
+compose = "2025.01.00"
 activityCompose = "1.10.0"
-paging = "3.2.1"
-accompanist = "0.30.1"
-coil = "2.4.0"
-androidWindow = "1.0.0"
+paging = "3.3.5"
+accompanist = "0.36.0"
+coil = "3.0.4"
+androidWindow = "1.3.0"
 lazycolumnscrollbar = "2.2.0"
 androidxBrowser = "1.8.0"
 jetbrains-markdown = "0.7.3"
@@ -52,10 +50,7 @@ mockito = "2.13.0"
 androidx-test-junit-ktx = "1.2.1"
 
 [libraries]
-# This is unused but it is a workaround to get Renovate to update the version of the plugin
-android-composeCompiler = {module="androidx.compose.compiler:compiler", version.ref ="composeCompiler"}
 okhttp-bom = { module = "com.squareup.okhttp3:okhttp-bom", version.ref = "okhttp" }
-coil-bom = { module = "io.coil-kt:coil-bom", version.ref = "coil" }
 compose-bom = { module = "androidx.compose:compose-bom", version.ref = "compose" }
 openai-client-bom = { module = "com.aallam.openai:openai-client-bom", version.ref = "openai-client" }
 openai-client = { module = "com.aallam.openai:openai-client" }
@@ -87,7 +82,6 @@ paging-compose = { module = "androidx.paging:paging-compose", version.ref = "pag
 window = { module = "androidx.window:window", version.ref = "androidWindow" }
 android-material = { module = "com.google.android.material:material", version.ref = "material" }
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanist" }
-accompanist-systemuicontroller = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanist" }
 accompanist-adaptive = { module = "com.google.accompanist:accompanist-adaptive", version.ref = "accompanist" }
 desugar = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugar" }
 jsoup = { module = "org.jsoup:jsoup", version.ref = "jsoup" }
@@ -98,10 +92,11 @@ jetbrains-markdown = { module = "org.jetbrains:markdown", version.ref = "jetbrai
 okhttp = { module = "com.squareup.okhttp3:okhttp" }
 okio = { module = "com.squareup.okio:okio", version.ref = "okio" }
 conscrypt-android = { module = "org.conscrypt:conscrypt-android", version.ref = "conscrypt" }
-coil-base = { module = "io.coil-kt:coil-base" }
-coil-gif = { module = "io.coil-kt:coil-gif" }
-coil-svg = { module = "io.coil-kt:coil-svg" }
-coil-compose = { module = "io.coil-kt:coil-compose" }
+coil-gif = { module = "io.coil-kt.coil3:coil-gif", version.ref = "coil" }
+coil-svg = { module = "io.coil-kt.coil3:coil-svg", version.ref = "coil" }
+coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil" }
+coil-okhttp = { module = "io.coil-kt.coil3:coil-network-okhttp", version.ref = "coil" }
+coil-cache-control = { module = "io.coil-kt.coil3:coil-network-cache-control", version.ref = "coil" }
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
 kotlin-stdlib-common = { module = "org.jetbrains.kotlin:kotlin-stdlib-common", version.ref = "kotlin" }
 kotlin-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
@@ -137,6 +132,7 @@ androidx-test-junit-ktx = { module = "androidx.test.ext:junit-ktx", version.ref 
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "androidPlugin" }
+kotlin-compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
@@ -145,11 +141,10 @@ kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", versi
 ktlint-gradle = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint-gradle" }
 
 [bundles]
-okhttp = ["okhttp", "okio"]
 okhttp-android = ["okhttp", "okio", "conscrypt-android"]
 kotlin = ["kotlin-stdlib", "kotlin-stdlib-common", "kotlin-coroutines-core", "kotlin-serialization-json"]
 jvm = ["jsoup", "tagsoup", "readability4j", "retrofit", "retrofit-converter-moshi", "moshi", "moshi-kotlin", "moshi-adapters", "qrgen", "gofeed-android"]
-android = ["lifecycle-runtime-ktx", "lifecycle-viewmodel-ktx", "lifecycle-viewmodel-savedstate", "paging-runtime-ktx", "room-ktx", "room-paging", "core-ktx", "androidx-appcompat", "androidx-preference", "coil-base", "coil-gif", "coil-svg", "kotlin-coroutines-android", "kodein-androidx", "androidx-browser", "emoji2", "emoji2-view-helper"]
-compose = ["activity-compose", "ui", "foundation", "foundation-layout", "compose-material3", "compose-material", "compose-material-icons-extended", "runtime", "ui-tooling", "navigation-compose", "paging-compose", "window", "android-material", "accompanist-permissions", "accompanist-systemuicontroller", "accompanist-adaptive", "compose-material3-windowsizeclass", "lifecycle-runtime-compose", "coil-compose", "lazycolumnscrollbar"]
+android = ["lifecycle-runtime-ktx", "lifecycle-viewmodel-ktx", "lifecycle-viewmodel-savedstate", "paging-runtime-ktx", "room-ktx", "room-paging", "core-ktx", "androidx-appcompat", "androidx-preference", "coil-gif", "coil-svg", "coil-okhttp", "coil-cache-control", "kotlin-coroutines-android", "kodein-androidx", "androidx-browser", "emoji2", "emoji2-view-helper"]
+compose = ["activity-compose", "ui", "foundation", "foundation-layout", "compose-material3", "compose-material", "compose-material-icons-extended", "runtime", "ui-tooling", "navigation-compose", "paging-compose", "window", "android-material", "accompanist-permissions", "accompanist-adaptive", "compose-material3-windowsizeclass", "lifecycle-runtime-compose", "coil-compose", "lazycolumnscrollbar"]
 test = ["kotlin-test-junit", "kotlin-coroutines-test", "junit", "mockito-core", "mockk", "mockwebserver"]
 android-test = ["kotlin-test-junit", "kotlin-coroutines-test", "mockk-android", "junit", "mockwebserver", "androidx-test-core", "androidx-test-core-ktx", "androidx-test-runner", "androidx-test-junit-ktx", "room-testing", "espresso-core", "compose-ui-test-junit4"]
