--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,7 +7,7 @@ kotlinxSerialization = "1.8.0"
 androidPlugin = "8.8.0"
 # BEGIN These should be upgraded in unison
 okhttp = "4.12.0"
-okio = "3.2.0"
+okio = "3.6.0"
 conscrypt = "2.5.2"
 # END Unison
 ktlint-gradle = "12.1.2"
@@ -19,8 +19,8 @@ moshi = "1.15.2"
 desugar = "2.1.4"
 jsoup = "1.18.3"
 tagsoup = "1.2.1"
-readability4j = "1.0.5"
-retrofit = "2.9.0"
+readability4j = "1.0.8"
+retrofit = "2.11.0"
 qrgen = "2.6.0"
 androidxCore = "1.15.0"
 androidxTestcore = "1.6.1"
@@ -48,8 +48,10 @@ espresso = "3.6.1"
 mockk = "1.13.16"
 mockito = "2.28.2"
 androidx-test-junit-ktx = "1.2.1"
+emoji2 = "1.5.0"
 
 [libraries]
+retrofit-bom = { module = "com.squareup.retrofit2:retrofit-bom", version.ref = "retrofit" }
 okhttp-bom = { module = "com.squareup.okhttp3:okhttp-bom", version.ref = "okhttp" }
 compose-bom = { module = "androidx.compose:compose-bom", version.ref = "compose" }
 openai-client-bom = { module = "com.aallam.openai:openai-client-bom", version.ref = "openai-client" }
@@ -107,15 +109,15 @@ kotlin-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines
 kodein-androidx = { module = "org.kodein.di:kodein-di-framework-android-x", version.ref = "kodein" }
 androidx-browser = { module = "androidx.browser:browser", version.ref = "androidxBrowser" }
 readability4j = { module = "net.dankito.readability4j:readability4j", version.ref = "readability4j" }
-retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
-retrofit-converter-moshi = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "retrofit" }
+retrofit = { module = "com.squareup.retrofit2:retrofit" }
+retrofit-converter-moshi = { module = "com.squareup.retrofit2:converter-moshi" }
 moshi = { module = "com.squareup.moshi:moshi", version.ref = "moshi" }
 moshi-kotlin = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshi" }
 moshi-adapters = { module = "com.squareup.moshi:moshi-adapters", version.ref = "moshi" }
 qrgen = { module = "com.github.kenglxn.qrgen:android", version.ref = "qrgen" }
 lazycolumnscrollbar = { module = "com.github.nanihadesuka:LazyColumnScrollbar", version.ref = "lazycolumnscrollbar" }
-emoji2-view-helper = { module = "androidx.emoji2:emoji2-views-helper", version = "1.3.+" }
-emoji2 = { module = "androidx.emoji2:emoji2", version = "1.3.+" }
+emoji2-view-helper = { module = "androidx.emoji2:emoji2-views-helper", version.ref = "emoji2" }
+emoji2 = { module = "androidx.emoji2:emoji2", version.ref = "emoji2" }
 junit = { module = "junit:junit", version.ref = "junit" }
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito" }
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
