--- a/.github/workflows/android_pr_build.yml
+++ b/.github/workflows/android_pr_build.yml
@@ -2,6 +2,17 @@ name: PR Checks
 
 on:
   pull_request:
+    paths:
+      - 'app/**'
+      - 'gradle/**'
+      - 'build.gradle.kts'
+      - 'settings.gradle.kts'
+      - 'gradle.properties'
+      - 'gradlew'
+      - 'gradlew.bat'
+      - 'gradle-wrapper.properties'
+      - 'gradle-wrapper.jar'
+      - '.github/workflows/android_pr_build.yml'
 
 jobs:
   # this job builds and uploads the apk
