chore: only run github workflow when files have changed (#562)
* chore: only run github workflow when files have changed

Signed-off-by: Jonas Kalderstam <jonas@cowboyprogrammer.org>

* chore: fix circleci machine name

Signed-off-by: Jonas Kalderstam <jonas@cowboyprogrammer.org>

* chore: fix circleci

Signed-off-by: Jonas Kalderstam <jonas@cowboyprogrammer.org>

---------

Signed-off-by: Jonas Kalderstam <jonas@cowboyprogrammer.org>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
     # These next lines define the Android machine image executor.
     # See: https://circleci.com/docs/executor-intro/ & https://circleci.com/developer/orbs/orb/circleci/android#executors-android-machine
     executor:
-      name: android/android-machine
+      name: android/android_machine
       tag: default
 
     # Add steps to the job
@@ -66,9 +66,8 @@ jobs:
 
   gradle-emulator-test:
     executor:
-      name: android/android-machine
+      name: android/android_machine
       tag: default
-      resource-class: medium
 
     steps:
       - checkout
